# inictus

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
benches/: cpu_id.rs  malloc_throughput.rs
scripts/: Dockerfile.bench  Dockerfile.memcheck  Dockerfile.mimalloc-bench  Dockerfile.perf  docker_bench.sh  docker_cache_glibc_bench.sh  docker_memcheck.sh  docker_perf.sh  local_bench.sh  local_memcheck.sh  local_perf.sh
src/: lib.rs
